[project]
name = "bayesian-changepoint-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.3.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
